style/global.scss
@use "../../planet4-master-theme/assets/src/scss/base/_variables.scss" as *;

:root {
  --font-family-secondary: "Work Sans";
  --font-family-tertiary: "Work Sans";
  --font-family-button: "Work Sans";
  --footer-menu--li--font-size: 15px;
  --button--line-height: 1.3em;
  --button--padding: 0.75rem 2rem;
}

/* GPAP typography style overides */

h1 {
  text-transform: uppercase;
}

h3,
h4,
h5,
h6 {
  &,
  a,
  a:active,
  a:visited,
  a:hover {
    font-family: var(--font-family-secondary), sans-serif;
  }
}

@media (min-width: 1600px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    &:not(.narrow-container) {
      max-width: 1600px;
    }
  }
}

.has-small-font-size {
  line-height: var(--line-height-s--font-family-tertiary);
}

/* SEE: planet4/plugins/planet4-plugin-gutenberg-blocks/assets/src/styles/blocks/core-overrides/Image.scss */
.wp-block-image {
  &.is-style-rounded-180 img {
    max-width: 180px;
  }

  &.is-style-rounded-90 img {
    max-width: 90px;
  }
}

.large-excerpt {
  &,
  & * {
    -webkit-line-clamp: 10 !important;
  }
}

.wp-block-columns {
  @media (max-width: 992px) {
    flex-direction: column;
  }
}

nav * {
  font-family: var(--font-family-primary);
  text-transform: uppercase;
}

@media (min-width: $medium-width) {
  .footer-cta {
    margin-bottom: -170px !important;
    padding-bottom: 180px !important;
  }
}

header .site-logo {
  // This stuff ensures that the nav logo is aligned with the footer logo
  @media (min-width: $large-width) {
    // Basically the footer logo is within a container with a max width
    // and a margin: auto, plus 12px of padding. So the below calculation
    // re-creates that spacing as a left-margin
    // then --mw is set to a different value for different screen widths
    margin-left: calc(((100vw - var(--mw)) / 2) + 12px);
  }

  @media (max-width: $extra-extra-large-width) {
    --mw: 1140px;
  }

  @media (min-width: $extra-extra-large-width) {
    --mw: 1600px;
  }

  @media (max-width: $extra-large-width) {
    --mw: 960px;
  }
}

// Target marks with no background colour (gutenberg sets this to `rgba(0, 0, 0, 0)`)
mark[style="background-color:rgba(0, 0, 0, 0)"] {
  padding: 0 !important;
}

.home:not(.scrolled) .top-navigation .icon {
  fill: white;
}

.with-mobile-tabs ~ :not(.page-header) + .page-content {
  padding-top: 0;
}

// This is an optimonk thing, their z-index is ridiculously high and we can't
// display anything above it, so we are setting it lower here.
// We were prompted to do this so it sits below our cookie consent block.
// See https://github.com/greenpeace/planet4-child-theme-australiapacific/pull/77/
.om-holder.om-holder {
  z-index: 99;
}

/* Styling for list card thumbnails */

.gpap-list-card-thumbnail {
  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.16);
  padding: 1rem;
}

